add rewe parsing